[tool.poetry]
name = "pythonproject3"
version = "0.1.0"
description = ""
authors = ["Bishoy Sameh <bishoysamehmagdy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

